<resources>
    <string name="app_name">Konnect</string>
    <string name="hello">Hello World!</string>
    <string name="login_hint_username">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="chat">Chat</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invitations">Invitations</string>
    <string name="manage_my_network">Manage My Network</string>
    <string name="post_content">Starship serial number 9 (SN9) completed SpaceX’s second high-altitude flight test of a Starship prototype from our site in Cameron County, Texas. <br /> These test flights are all about improving our understanding and development of a fully reusable transportation system designed to carry both crew and cargo on long-duration, interplanetary flights and help humanity return to the Moon, and travel to Mars and beyond.</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="continue_button">Continue</string>
    <string name="didn_t_get_otp_resend">Did not get OTP? <b>Resend</b></string>
    <string name="please_enter_the_verification_code_we_sent_to_you">Please Enter the verification code we sent to you</string>
    <string name="change_to_dark_mode">Switch Theme</string>
    <string name="set_theme">Set Theme</string>
    <string name="please_enter_your_phone_number_to_continue">Please Enter Your Phone Number to Continue</string>
    <string name="otp_code">OTP CODE</string>
    <string name="like_count">Like count</string>
    <string name="comment_count">Comment count</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="dob">DOB</string>
    <string name="activity">Activity</string>
    <string name="start_a_post">Start a post</string>
    <string name="about_me">About Me</string>
    <string name="summary">Summary</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="unfriend">Unfriend</string>
    <string name="block">Block</string>
    <string name="no_post_available_make_a_new_post_or_make_a_new_connection">No Post Available, make a new post or make a new connection!</string>
    <string name="add_post">Add Post</string>
    <string name="write_something_to_your_colleagues">Write something to your colleagues!</string>
    <string name="log_out">Log Out</string>
    <string name="set_font">Set Font</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="skill">Skill</string>
    <string name="connection">&#160;Connection</string>
    <string name="home">Home</string>
    <string name="my_network">My Network</string>
    <string name="post">Post</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="website">Website</string>
    <string name="posts_you_created_shared_or_commented_on_in_the_last_90_days_are_displayed_here">Posts you created, shared, or commented on in the last 90 days are displayed here.</string>
    <string name="institution_post">Institution Post</string>
    <string name="about_us">About us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="living_at">Living In&#160;</string>
    <string name="no_sum">No summary</string>
    <string name="birthday">Birth date, </string>
    <string name="connections">&#160;connections</string>
    <string name="login_and_get_started_with_konnect">Login and get started with Konnect</string>
    <string name="viewed_your_profile">viewed your profile</string>
    <string name="upcoming_invite">You have an upcoming invitation from</string>
    <string name="tagger">tagged you in a post</string>
    <string name="have_message_from">You have a new message from</string>
    <string name="username">username</string>
    <string name="message">Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_connections">User Connections</string>
    <string name="institution_photo">Institution photo</string>
    <string name="institution_name">Institution name</string>
    <string name="organization_x">Organization X</string>
    <string name="city">City</string>
    <string name="about_organization_x">About Organization X</string>
    <string name="period">Period</string>
    <string name="profile_photo">Profile photo</string>
    <string name="have_block">"You have block this user"</string>
    <string name="have_been_block">You have been block by this user</string>
    <string name="john_doe">John Doe</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="at">at</string>
    <string name="add_story">"Add Image Story"</string>
    <string name="this_is_my_summary">This is my summary</string>
    <string name="reset">Reset</string>
    <string name="no_exp">No Experience!</string>
    <string name="add_story_video">Add Video Story</string>
    <string name="located_in">Located in</string>
    <string name="school">School</string>
    <string name="degree">Degree</string>
    <string name="post_date">Post Date</string>
    <string name="post_content1">Post Content</string>
    <string name="leave_your_thoughts_here">Leave your thoughts here...</string>
    <string name="user_full_name">User Full Name</string>
    <string name="posted_at">Posted at</string>
    <string name="comment_content">Comment content</string>
    <string name="experience_title">Experience Title</string>
    <string name="employment_type">Employment Type</string>
    <string name="user_name">User name</string>
</resources>