<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/networkFragment"
        android:title="@string/my_network"
        android:icon="@drawable/ic_network"/>
    <item
        android:id="@+id/postFragment"
        android:title="@string/post"
        android:icon="@drawable/ic_add_post"/>
    <item
        android:id="@+id/notificationFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification"/>
    <item
        android:id="@+id/settingFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
</menu>