<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/experience_row_image"
        android:layout_width="@dimen/listview_row_image_size"
        android:layout_height="@dimen/listview_row_image_size"
        android:maxWidth="@dimen/listview_row_image_size"
        android:maxHeight="@dimen/listview_row_image_size"
        android:src="@drawable/ic_home"
        />

    <LinearLayout
        android:id="@+id/experience_detail_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/experience_row_institution_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/institution_name"
            android:textSize="@dimen/list_detail_title_fontsize"
            style="@style/font_detail_color"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/experience_row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_title"
            android:textSize="@dimen/list_detail_detail_fontsize"
            style="@style/font_detail_color" />

        <TextView
            android:id="@+id/experience_row_employment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employment_type"
            android:textSize="@dimen/list_detail_detail_fontsize"
            style="@style/font_detail_color"
            />

        <TextView
            android:id="@+id/experience_row_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:textSize="@dimen/list_detail_detail_fontsize"
            style="@style/font_detail_color"
            />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/listview_edit_experience"
        android:layout_width="@dimen/icon_small_size"
        android:layout_height="@dimen/icon_small_size"
        android:visibility="gone"
        android:src="@drawable/ic_edit" />

</LinearLayout>