<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/comment_row_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:maxWidth="@dimen/listview_row_image_size"
        android:maxHeight="@dimen/listview_row_image_size"
        android:src="@drawable/ic_home" />

    <LinearLayout
        android:id="@+id/comment_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray_200"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/comment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posted_at"
            android:textColor="@color/gray_900"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_content"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>