<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="5dp"
    android:paddingVertical="6dp"
    tools:context=".view.PostDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_detail_identity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_detail_identity_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@color/black"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <TextView
            android:id="@+id/post_detail_identity_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/post_detail_identity_date"
            app:layout_constraintLeft_toRightOf="@id/post_detail_identity_image"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/user_full_name"/>

        <TextView
            android:id="@+id/post_detail_identity_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/post_detail_identity_name"
            app:layout_constraintLeft_toRightOf="@id/post_detail_identity_image"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:textSize="12sp"
            android:textColor="@color/gray_700"
            android:text="@string/post_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/post_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_detail_identity_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/post_content1"
        style="@style/textFont"
        />

    <LinearLayout
        android:id="@+id/post_detail_like_comment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_detail_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_detail_like_button"
            android:src="@drawable/ic_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/gray_400" />

        <TextView
            android:id="@+id/post_detail_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/like_count" />

        <ImageView
            android:id="@+id/post_detail_comment_button"
            android:src="@drawable/ic_comment"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/gray_400" />

        <TextView
            android:id="@+id/post_detail_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/comment_count" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/post_detail_like_comment_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/post_detail_media"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:src="@color/black" />

        <VideoView
            android:id="@+id/post_detail_video"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/post_detail_comments_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_detail_like_comment_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

    </LinearLayout>

    <EditText
        android:id="@+id/post_detail_comment_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/leave_your_thoughts_here"
        android:padding="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/post_detail_comment_send" />

    <ImageView
        android:id="@+id/post_detail_comment_send"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_send"
        android:tint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/post_detail_comment_input"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>